--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Persons</title>
     <link rel="stylesheet" href="/styles/basicstyles.css" />
+    <script src="/js/update.js"></script>
   </head>
   <body>
     <h1>Person Data</h1>
